added light theme in css body.light-theme

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@
 }
 
 /* Light Theme Variables */
-.light-theme {
+body.light-theme {
   --color-bg: #F5F5F7;
   --color-bg-light: #FFFFFF;
   --color-text: #1D1D1F;
